# OpenNiCamPlugin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  onitouch.cbp  testApp.py
cmake/Modules/: FindOpenNI.cmake
installScripts/: install.py
src/: DepthTouchDetector.cpp  DepthTouchDetector.h  OniCamPlugin.cpp  OniCamPlugin.h  OniCamera.cpp  OniCamera.h  OniCameraNode.cpp  OniCameraNode.h  OniDevice.cpp  OniDevice.h  OniDeviceManager.cpp  OniDeviceManager.h  OniDeviceThread.cpp  OniDeviceThread.h  OniStreamNode.cpp  OniStreamNode.h  OniTouchPlugin.cpp  OniTouchPlugin.h  OpenNIPlugin.cpp  OpenNIWrapper.h
